plugins {
	id 'org.springframework.boot' version '2.7.2'
	id 'io.spring.dependency-management' version '1.0.12.RELEASE'
	id 'java'
}

group = 'com'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
	// https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
	//implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '4.1.0'
	implementation 'org.apache.poi:poi:4.0.0'
	implementation 'org.apache.poi:poi-ooxml:4.0.0'
	//done
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'


	// https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client
	implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '3.0.5'
	implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.2'
	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-aop
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: '2.7.2'
	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.7.2'
	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
	// https://mvnrepository.com/artifact/io.springfox/springfox-boot-starter
	implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
	// https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3
	implementation group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.12.230'
	// https://mvnrepository.com/artifact/org.json/json
	implementation group: 'org.json', name: 'json', version: '20220320'
	// https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-jpamodelgen
	compileOnly 'org.hibernate:hibernate-jpamodelgen'
	annotationProcessor('org.hibernate:hibernate-jpamodelgen')



}

tasks.named('test') {
	useJUnitPlatform()
}